<resources>
    <string name="app_name">fly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="departure">Departure</string>
    <string name="date">Date</string>
    <string name="add_user">Add User</string>
    <string name="destination">Destination</string>
    <string name="flight_number">Flight Number</string>
    <string name="ages">Age</string>
</resources>